--- a/TramiteDocumentarioOracle/web/vistas/tablas/Empleados.xhtml
+++ b/TramiteDocumentarioOracle/web/vistas/tablas/Empleados.xhtml
@@ -3,14 +3,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
 
         <ui:composition template="./../templates/#{logeoC.user.template}">
 
             <ui:define name="content">
-                <h:form>
+                <h:form id="frm">
+                    <br/>
+                    <br/>
+                    <br/>
+                    <center><h1>EMPLEADOS</h1></center>
+                    <p:growl id="msg" showDetail="true" autoUpdate="true"/>
                     <p:dataTable id="data"
                                  paginator="true"
                                  value="#{empleadosC.lstEmpleados}"
@@ -19,9 +25,6 @@
                                  rows="5">
                         <p:column style="width: 50px">
                             <p:rowToggler/>
-                        </p:column>
-                        <p:column headerText="Código" >
-                            <h:outputText value="#{emple.codEmple}" />
                         </p:column>
                         <p:column headerText="Nombres" >
                             <h:outputText value="#{emple.nomEmple} #{emple.apeEmple}" />
@@ -33,27 +36,50 @@
                             <h:outputText value="#{emple.celEmple}" />
                         </p:column>
                         <p:rowExpansion>
-                            <p:column headerText="Dirección" >
-                                <h:outputText value="#{emple.dirEmple}" />
-                            </p:column>
-                            <p:column headerText="Usuario" >
-                                <h:outputText value="#{emple.userEmple}" />
-                            </p:column>
-                            <p:column headerText="Nivel" >
-                                <h:outputText value="#{emple.levelEmple}" />
-                            </p:column>
-                            <p:column headerText="Ubigeo" >
-                                <h:outputText value="#{emple.codUbi}" />
-                            </p:column>
-                            <p:column headerText="Área" >
-                                <h:outputText value="#{emple.codA}" />
-                            </p:column>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <h:outputLabel value="Dirección:  "/>
+                                    <h:outputLabel value="#{emple.dirEmple}" />
+                                </div>
+                                <div class="col-md-4">
+                                    <p:outputLabel value="Usuario: "/>
+                                    <h:outputLabel value="#{emple.userEmple}" />
+                                </div>
+                                <div class="col-md-4">
+                                    <p:outputLabel value="Nivel: "/>
+                                    <h:outputLabel value="#{emple.nivel}" />
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <p:outputLabel value="Departamento: "/>
+                                    <h:outputLabel value="#{emple.dpto}" />
+                                </div>
+                                <div class="col-md-4">
+                                    <p:outputLabel value="Provincia: "/>
+                                    <h:outputLabel value="#{emple.prov}" />
+                                </div>
+                                <div class="col-md-4">
+                                    <p:outputLabel value="Distrito: "/>
+                                    <h:outputLabel value="#{emple.dist}" />
+                                </div>
+                                <div class="col-md-4">
+                                    <p:outputLabel value="Área: "/>
+                                    <h:outputLabel value="#{emple.nomA}" />
+                                </div>
+                            </div>
                         </p:rowExpansion>
+                        <f:facet name="footer">
+                            <p:commandButton value="Agregar" 
+                                             icon="ui-icon-plusthick"
+                                             actionListener="#{feriadosC.preparedFeriados()}"
+                                             oncomplete="PF('addEmpleado').show()"
+                                             update=":addformu"/>
+                        </f:facet>
                     </p:dataTable>
                 </h:form>
+                <ui:include src="add/addEmpleado.xhtml" />
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
