--- a/TramiteDocumentarioOracle/web/vistas/tablas/Empresas.xhtml
+++ b/TramiteDocumentarioOracle/web/vistas/tablas/Empresas.xhtml
@@ -3,23 +3,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
 
         <ui:composition template="./../templates/#{logeoC.user.template}">
 
             <ui:define name="content">
-                <h:form>
+                <h:form id="frm">
+                    <br/>
+                    <br/>
+                    <br/>
+                    <center><h1>EMPRESAS</h1></center>
+                    <p:growl id="msg" showDetail="true" autoUpdate="true"/>
                     <p:dataTable id="data"
                                  paginator="true"
                                  value="#{empresasC.lstEmpresas}"
                                  var="empre" rowKey="#{empre.codEmpre}"
                                  rowsPerPageTemplate="5 10 15 20 30 40" 
                                  rows="5">
-                        <p:column headerText="Código" >
-                            <h:outputText value="#{empre.codEmpre}" />
-                        </p:column>
                         <p:column headerText="Nombre" >
                             <h:outputText value="#{empre.nomEmpre}" />
                         </p:column>
@@ -33,10 +36,18 @@
                             <h:outputText value="#{empre.telEmpre}" />
                         </p:column>
                         <p:column headerText="Ubigeo" >
-                            <h:outputText value="#{empre.codUbi}" />
+                            <h:outputText value="#{empre.dpto} - #{empre.prov} - #{empre.dist}"/>
                         </p:column>
+                        <f:facet name="footer">
+                            <p:commandButton value="Agregar" 
+                                             icon="ui-icon-plusthick"
+                                             actionListener="#{empresasC.preparedEmpresas()}"
+                                             oncomplete="PF('addEmpresa').show()"
+                                             update=":addEmpresa"/>
+                        </f:facet>
                     </p:dataTable>
                 </h:form>
+                <ui:include src="add/addEmpresa.xhtml"/>
             </ui:define>
 
         </ui:composition>
